# fuzzysearch-owo

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.postgres-bktree  README.md  docker-compose.yml  jobs.yaml  sqlx-data.json
.github/workflows/: debug.yaml  images.yaml
assets/js/: app.js  event.js
content/: CHANGELOG.md  FAQ.md  takedowns.md
frontend/: esbuild.mjs  package.json  tsconfig.json
migrations/: 20211211011539_users.up.sql  20211211032153_linked_accounts.down.sql  20211211032153_linked_accounts.up.sql  20211211072239_owned_media_items.down.sql  20211211072239_owned_media_items.up.sql  20211212020733_user_events.down.sql  20211212020733_user_events.up.sql  20211214014558_user_email.down.sql  20211214014558_user_email.up.sql  20211216151333_patreon.down.sql  20211216151333_patreon.up.sql  20211216210444_auth_state.down.sql  20211216210444_auth_state.up.sql  20211217013455_unique_emails.down.sql  20211217013455_unique_emails.up.sql  20211218054415_flist.down.sql  20211218054415_flist.up.sql  20211222053630_reddit.down.sql  20211222053630_reddit.up.sql  20220108223122_user_sessions.down.sql  20220108223122_user_sessions.up.sql  20220202201427_user_settings.down.sql  20220202201427_user_settings.up.sql  20220203025756_telegram_login.down.sql  20220203025756_telegram_login.up.sql  20220203043937_admins.down.sql  20220203043937_admins.up.sql  20220203154518_cascades.down.sql  20220203154518_cascades.up.sql  20220203155513_user_display_name.down.sql  20220203155513_user_display_name.up.sql  20220316225554_disable_subreddit.down.sql  20220316225554_disable_subreddit.up.sql  20220328052225_stored_media_event_metadata.down.sql  20220328052225_stored_media_event_metadata.up.sql  20220329000051_fix_update_event_metadata_function.down.sql  20220329000051_fix_update_event_metadata_function.up.sql  20220329164811_only_make_accounts_unique_on_account.down.sql  20220329164811_only_make_accounts_unique_on_account.up.sql  20220618012539_post_allowlist.down.sql  (+59 more)
queries/account/: account_link_create.sql  account_link_lookup_id.sql  account_link_owned_by_user.sql  account_lookup_by_username.sql  lookup_by_site_id.sql
queries/admin/: account_ids.sql  flist_stats.sql  migrate_owned_media_account.sql  overview.sql  reddit_stats.sql  user_ids.sql
queries/auth/: user_create.sql  user_lookup_id.sql  user_lookup_login.sql  user_set_email.sql  user_verify_email.sql
queries/auth_state/: create.sql  lookup.sql  remove.sql
queries/bluesky/: create_image.sql  create_post.sql  delete_post.sql  get_or_create_repo.sql  similar_images.sql
queries/file_upload_chunk/: get.sql  size.sql  upload.sql
queries/flist/: abort_run.sql  complete.sql  get_by_id.sql  insert_item.sql  previous_run.sql  recent_runs.sql  similar_images.sql  start.sql  update.sql
queries/linked_account/: all_site_accounts.sql  create.sql  items.sql  lookup_by_id.sql  lookup_by_id_for_update.sql  lookup_by_site_id.sql  move_media_to_delete.sql  owned_by_user.sql  remove.sql  update_data.sql  update_loading_state.sql  verify.sql
queries/linked_account_import/: admin_list.sql  complete.sql  get.sql  loaded.sql  start.sql
queries/owned_media/: add_item.sql  add_manual_item.sql  count.sql  event_counts.sql  find_similar.sql  find_similar_with_owner.sql  get_by_id.sql  link_site_account.sql  lookup_by_sha256.sql  lookup_by_site_id.sql  media_before.sql  media_before_added.sql  media_before_events.sql  media_before_recent.sql  media_count.sql  media_remove.sql  old_storage.sql  recent_media.sql  resolve_media.sql  update_account.sql  update_media.sql
queries/patreon_webhook_event/: log.sql
queries/pending_notification/: create.sql  ready.sql  remove.sql
queries/reddit/: add_subreddit.sql  create_image.sql  create_post.sql  exists.sql  get_by_name.sql  needing_update.sql  similar_images.sql  subreddits.sql  update_position.sql  update_state.sql
queries/site_alerts/: active_for_user.sql  create.sql  deactivate.sql  dismiss.sql  list.sql
queries/twitter_auth/: create.sql  find.sql  remove.sql
queries/user/: associate_telegram.sql  check_email_verifier_token.sql  create_telegram.sql  delete.sql  email_exists.sql  lookup_by_api_token.sql  lookup_by_credential.sql  lookup_by_rss_token.sql  lookup_by_telegram_id.sql  lookup_email.sql  lookup_id.sql  move_media_to_delete.sql  set_email.sql  set_reset_token.sql  update_display_name.sql  update_password.sql  update_tester.sql  username_exists.sql  webauthn_credentials.sql
queries/user_allowlist/: add.sql  is_allowed.sql  lookup_many.sql  remove.sql
queries/user_event/: count.sql  event_create.sql  event_feed.sql  event_similar.sql  recent_events.sql  recent_events_for_media.sql  resolve.sql
queries/user_session/: check.sql  create.sql  destroy.sql  list.sql  remove_expired.sql
queries/user_setting/: get.sql  set.sql
queries/webauthn/: insert_credential.sql  lookup_by_credential.sql  mark_used.sql  remove.sql  user_credentials.sql
src/: admin.rs  api.rs  auth.rs  common.rs  error.rs  flist.rs  jobs.rs  main.rs  models.rs  patreon.rs  routes.rs  user.rs
src/jobs/: email.rs
src/site/: bsky.rs  deviantart.rs  flist.rs  furaffinity.rs  mod.rs  patreon.rs  reddit.rs  twitter.rs  weasyl.rs
templates/: _base.html  _pagination.html  base.html  changelog.html  error.html  home.html  index.html  markdown.html
templates/admin/: _flist_import_runs.html  _ingest_stats.html  _inject_job.html  _inject_submission.html  _layout.html  _monitored_subreddits.html  _sidebar.html  alerts.html  imports.html  index.html  inject.html  overview.html
templates/auth/: forgot.html  forgot_email.html  login.html  register.html  sessions.html
templates/email/: password_reset.txt  similar.txt  verify.txt
templates/notification/: similar_digest_email.html  similar_digest_email.txt  similar_email.html  similar_email.txt  similar_telegram.txt
templates/user/: account_link.html  account_view.html  add_email.html  check_form.html  check_results.html  feed.html  feed_item.html  home.html  index.html  media_view.html  (+3 more)
tools/: pre-release-check.sh
(+18 files in other folders)
