[package]
name = "fuzzysearch-owo"
version = "0.19.9"
edition = "2024"
authors = ["Syfaro <syfaro@huefox.com>"]
publish = false

[package.metadata.release]
allow-branch = ["main"]
sign-tag = true
pre-release-hook = "tools/pre-release-check.sh"

[features]
env = ["dotenv"]

[dependencies]
actix = "0.13"
actix-files = "0.6"
actix-http = "3"
actix-multipart = "0.6"
actix-router = "0.5"
actix-session = { version = "0.9", features = ["cookie-session"] }
actix-web = { version = "4.2.1", default-features = false, features = ["macros", "cookies", "compress-brotli", "compress-gzip", "compress-zstd"] }
actix-web-actors = "4"
actix-web-httpauth = "0.8"
actix-web-lab = "0.20.2"
anyhow = "1"
argonautica = "0.2"
askama = { version = "0.12.1" , features = ["serde-json", "humansize", "markdown"] }
async-nats = "0.35.1"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env", "cargo", "wrap_help"] }
dotenv = { version = "0.15", optional = true }
egg-mode = "0.16"
enum-map = "~2.0.1"
faktory = "0.12"
futures = "0.3"
hex = "0.4"
hickory-resolver = "0.24"
hmac = "0.12"
image = "0.23"
infer = "0.15"
ipnetwork = "0.19"
itertools = "0.13.0"
lazy_static = "1"
lettre = { version = "0.11.4", features = ["tokio1-native-tls", "tracing", "serde"] }
md-5 = "0.10"
oauth2 = { version = "4", features = ["reqwest"] }
opentelemetry = "0.21.0"
percent-encoding = "2.2"
prometheus = { version = "0.13", features = ["process"] }
radix_fmt = "1"
rand = "0.8"
regex = "1"
reqwest = { version = "0.11", features = ["json", "cookies"] }
roux = "2"
rss = "2"
rusoto_core = "0.48"
rusoto_credential = "0.48"
rusoto_s3 = "0.48"
scraper = "0.19.0"
sentry = "0.33.0"
sentry-actix = "0.33.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_plain = "1"
serde_with = { version = "3", features = ["hex"] }
sha2 = "0.10"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-actix-web = { version = "0.7", features = ["opentelemetry_0_21"] }
tracing-opentelemetry = "0.22"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
webauthn-rs = { version = "0.5.0-dev", features = ["resident-key-support", "danger-allow-state-serialisation", "preview-features"] }
webauthn-rs-proto = "0.5.0-dev"
zip = "2.1.1"
zxcvbn = "3.0.1"

furaffinity-rs = { git = "https://github.com/Syfaro/furaffinity-rs.git" }
fuzzysearch = { git = "https://github.com/Syfaro/fuzzysearch-rs.git", features = ["trace", "local_hash"] }
tgbotapi = { git = "https://github.com/Syfaro/tgbotapi-rs.git" }

foxlib = { git = "https://github.com/Syfaro/foxlib.git", features = ["jobs", "flags", "flags-openssl"] }
fuzzysearch-common = { git = "https://github.com/Syfaro/fuzzysearch.git", features = ["queue"] }

[dependencies.sqlx]
version = "0.6"
features = [
    "runtime-tokio-native-tls",
    "postgres",
    "macros",
    "migrate",
    "uuid",
    "json",
    "offline",
    "chrono",
    "ipnetwork"
]
